<resources>
    <string name="app_name">Product-Info</string>
    <string name="welcome">Welcome</string>
    <string name="user_name">User Name:</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="password">Password:</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="name">Name:</string>
    <string name="enter_name">Enter Name</string>
    <string name="price">Price:</string>
    <string name="enter_price">Enter Price</string>
    <string name="quantity">Quantity:</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="brand">Brand:</string>
    <string name="enter_brand">Enter Brand</string>
    <string name="info">Info:</string>
    <string name="enter_info">Enter Info</string>
    <string name="insert_product">Insert Product</string>
    <string name="HomeNameText">Sparklink IT World</string>
    <string name="listButton">Show Product List</string>
    <string name="entrybutton">Admin Login</string>
    <string name="title_activity_product_list">Product List</string>
    <string name="view_product_list">View Product List</string>
    <string name="insert_new_product">Insert New Product</string>
</resources>
