<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Login_Activity">

    <ImageView
        android:id="@+id/logoIV"
        android:layout_width="match_parent"
        android:layout_height="150sp"
        android:src="@drawable/splash" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/userNameTV"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textColor="#000"
            android:textSize="25dp" />

        <EditText
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_user_name"
            android:textColor="#000"
            android:textSize="25dp"
            android:inputType="text"
            android:id="@+id/nameET"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/passwordTV"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="#000"
            android:textSize="25dp" />

        <EditText
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:textColor="#000"
            android:inputType="textPassword"
            android:textSize="25dp"
            android:id="@+id/passwordET"/>
    </LinearLayout>
    <Button
        android:onClick="CheckLogin"
        android:layout_width="match_parent"
        android:layout_marginTop="15sp"
        android:textSize="25sp"
        android:padding="15sp"
        android:text="@string/login"
        android:layout_height="wrap_content" />
    <Button
        android:onClick="backToScreen"
        android:layout_width="match_parent"
        android:layout_marginTop="15sp"
        android:textSize="25sp"
        android:padding="15sp"
        android:text="Back"
        android:layout_height="wrap_content" />
</LinearLayout>
